# src/routes/eventsRouter.js
@@ -12,4 +12,11 @@ router.post(
 // aadil
 // add router
 // route /getEventByUid
+
+router.post(
+  "/create-event",
+  validations.createEventValidation,
+  eventController.createEventCtrl
+);
+
 module.exports = router;
